--- a/FirstImpressions/FirstImpressions-Info.plist
+++ b/FirstImpressions/FirstImpressions-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.SamAlexDave.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.SamAlexDave.FirstImpressions</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
