Icons, assets, and design work

--- a/FirstImpressions/FirstImpressions-Info.plist
+++ b/FirstImpressions/FirstImpressions-Info.plist
@@ -47,5 +47,9 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>GearedSlab.ttf</string>
+	</array>
 </dict>
 </plist>
